--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -293,7 +293,10 @@
      "text": [
       "a-tile.md  accelerate-iterative.md \r\n",
       "stream-breakpoint.md \r\n",
-      "navigate-maze.md \r\n"
+      "navigate-maze.md \r\n",
+      "lin-kernighan.md.md \r\n",
+      "exemplar-matching.md \r\n",
+      "near-repeat.md \r\n"
      ]
     }
    ],
