[fix #1] Get full publications

--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -292,7 +292,8 @@
      "output_type": "stream",
      "text": [
       "a-tile.md  accelerate-iterative.md \r\n",
-      "stream-breakpoint.md \r\n"
+      "stream-breakpoint.md \r\n",
+      "navigate-maze.md \r\n"
      ]
     }
    ],
