[fix #1] Get full publications

--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -291,8 +291,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2009-10-01-paper-title-number-1.md  2015-10-01-paper-title-number-3.md\r\n",
-      "2010-10-01-paper-title-number-2.md\r\n"
+      "a-tile.md  accelerate-iterative.md \r\n",
+      "stream-breakpoint.md \r\n"
      ]
     }
    ],
@@ -332,7 +332,7 @@
     }
    ],
    "source": [
-    "!cat ../_publications/2009-10-01-paper-title-number-1.md"
+    "!cat ../_publications/a-tile.md"
    ]
   },
   {
