--- a/_talks/pdp_12_10.md
+++ b/_talks/pdp_12_10.md
@@ -1,13 +1,13 @@
 ---
-title: "Tutorial 1 on Relevant Topic in Your Field"
+title: "Data possess"
 collection: talks
 type: "Tutorial"
 permalink: /talks/2013-03-01-tutorial-1
-venue: "UC-Berkeley Institute for Testing Science"
-date: 2013-03-01
-location: "Berkeley CA, USA"
+venue: "TRIAS tech talk series"
+date: 2018-12-10
+location: "Hangzhou, China"
 ---
 
-[More information here](http://exampleurl.com)
+[Download paper here](http://academicpages.github.io/files/pdp_12_10.pptx)
 
 This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
