--- a/_talks/pdp_12_10.md
+++ b/_talks/pdp_12_10.md
@@ -8,6 +8,6 @@ date: 2018-12-10
 location: "Hangzhou, China"
 ---
 
-[Download paper here](http://academicpages.github.io/files/pdp_12_10.pptx)
+This is the talk about the data possesion protocols.
 
-This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+[Download slides here](http://academicpages.github.io/files/pdp_12_10.pptx)
