--- a/_teaching/2012-cs6140.md
+++ b/_teaching/2012-cs6140.md
@@ -1,10 +1,10 @@
 ---
-title: "CS 6140"
+title: "CS 6140/4140"
 collection: teaching
 type: "Graduate course"
-permalink: /teaching/2014-spring-teaching-1
+permalink: /teaching/2012-fall-teaching-1
 venue: "Georgia Tech, CSE"
-date: 2014-01-01
+date: 2012-01-01
 location: "Atlanta, GA"
 ---
 
