--- a/_talks/pdp_12_10.md
+++ b/_talks/pdp_12_10.md
@@ -10,4 +10,4 @@ location: "Hangzhou, China"
 
 This is the talk about the data possesion protocols.
 
-[Download slides here](http://academicpages.github.io/files/pdp_12_10.pptx)
+[Download slides here](http://stplaydog.github.io/files/pdp_12_10.pptx)
