[fix #4] Virtual machine blog

--- a/_posts/2019-05-28-blog-post-1.md
+++ b/_posts/2019-05-28-blog-post-1.md
@@ -21,4 +21,10 @@ And find a ubuntu ISO to download using such a link:
 
 http://old-releases.ubuntu.com/releases/14.04.5/ 
 
+1. open vmware fusion and try to add a new image
 
+![Alt text](../images/vm_1.jpg?raw=true "Open vmware fusion")
+
+2. drag the image into the box and configure some features of the OS and start installing
+
+![Alt text](../images/vm_2.jpg?raw=true "install OS (ubuntu)")
