[fix #4] Virtual machine blog

--- a/_posts/2019-05-28-blog-post-1.md
+++ b/_posts/2019-05-28-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'Have a virtual distributed environment on your laptop'
+title: 'Have a Virtual Distributed Environment on Your Laptop'
 date: 2019-05-28
 permalink: /posts/2012/08/blog-post-1/
 tags:
@@ -23,8 +23,8 @@ http://old-releases.ubuntu.com/releases/14.04.5/
 
 1. open vmware fusion and try to add a new image
 
-![Alt text](../images/vm_1.jpg?raw=true "Open vmware fusion")
+![](../images/vm_1.jpg)
 
 2. drag the image into the box and configure some features of the OS and start installing
 
-![Alt text](../images/vm_2.jpg?raw=true "install OS (ubuntu)")
+![](../images/vm_2.jpg)
