--- a/_posts/2018-12-28-blog-post-1.md
+++ b/_posts/2018-12-28-blog-post-1.md
@@ -1,9 +1,9 @@
 ---
-title: 'What's the core advantage of a successful pub-chain?'
+title: 'What is the core advantage of a successful pub-chain?'
 date: 2018-12-28
 permalink: /posts/2018/12/blog-post-1/
 tags:
-  - Public block chain 
+  - block chain 
 ---
 
 ## Reference
