--- a/_posts/2019-06-02-blog-post-1.md
+++ b/_posts/2019-06-02-blog-post-1.md
@@ -33,8 +33,9 @@ tags:
 
 ## Conclusion
 
-| POW:  | 189 B |
+| consensus | value |
 |-------|-------|
+| POW:  | 189 B |
 | BFT:  | 25.1B |
 | POS:  | 6.5 B |
 | DAG:  | 1.1 B |
