--- a/_posts/2019-06-02-blog-post-1.md
+++ b/_posts/2019-06-02-blog-post-1.md
@@ -1,12 +1,12 @@
 ---
-title: 'NYC Car pooling analysis using Alibaba MaxCompute' 
-date: 2017-07-16
-permalink: /posts/2017/07/blog-post-1/
+title: 'Top 20 pub chain summary' 
+date: 2019-06-02
+permalink: /posts/2019/06/blog-post-1/
 tags:
-  - Big data, data analysis 
+  - public block chain 
 ---
 
-## Reference link 
+## Summary 
 
 | ranking |	name	| consensus    | value	 | year |
 | ------- |-------------| -------------|---------|------|
@@ -31,8 +31,11 @@ tags:
 | 19.	  | NEM	        | reputation/proof of importance |	0.8B |	2014 |
 | 20.	  | NEO	        | dBFT	       | 0.7B	| 2016 |
 
-POW: 189 B
-BFT : 25.1B
-POS: 6.5 B
-DAG: 1.1 B
-MISC: 0.8 B
+## Conclusion
+
+| POW:  | 189 B |
+|-------|-------|
+| BFT:  | 25.1B |
+| POS:  | 6.5 B |
+| DAG:  | 1.1 B |
+| MISC: | 0.8 B |
