--- a/_posts/2019-06-02-blog-post-1.md
+++ b/_posts/2019-06-02-blog-post-1.md
@@ -36,9 +36,9 @@ As of 2019/05/20
 ## Conclusion
 
 | consensus | value |
-|-------|-------|
-| POW:  | 189 B |
-| BFT:  | 25.1B |
-| POS:  | 6.5 B |
-| DAG:  | 1.1 B |
-| MISC: | 0.8 B |
+|-----------|-------|
+| POW       | 189 B |
+| BFT       | 25.1B |
+| POS       | 6.5 B |
+| DAG       | 1.1 B |
+| MISC      | 0.8 B |
