--- a/_posts/2019-06-02-blog-post-1.md
+++ b/_posts/2019-06-02-blog-post-1.md
@@ -13,10 +13,10 @@ As of 2019/05/20
 | ranking |	name	| consensus    | value	 | year |
 | ------- |-------------| -------------|---------|------|
 | 1.	  | Bitcoin	| POW	       | 141B	 | 2009 |
-| 2.	  | ETH	POW/POS	| POW/POS      | 26 B	 | 2013 |
-| 3.	  | XRP	BFT	| BFT          | 16B	 | 2012 |
-| 4.	  | BCH	POW	| POW          | 7B	 | 2009 |
-| 5.	  | EOS	BFT	| BFT          | 5B	 | 2017 |
+| 2.	  | ETH		| POW/POS      | 26 B	 | 2013 |
+| 3.	  | XRP		| BFT          | 16B	 | 2012 |
+| 4.	  | BCH		| POW          | 7B	 | 2009 |
+| 5.	  | EOS		| BFT          | 5B	 | 2017 |
 | 6.	  | LITE	| POW	       | 5B	 | 2011 |
 | 7.	  | BINANCE	| ERO20/POW    | 4B	 | 2017 |
 | 8.	  | Tether	| POW/BITCOIN  | 2.8B	 | 2015 |
