add white papers

--- a/_posts/2019-06-02-blog-post-1.md
+++ b/_posts/2019-06-02-blog-post-1.md
@@ -12,26 +12,26 @@ As of 2019/05/20
 
 | ranking |	name	| consensus        | value | year | White Paper |
 | ------- |-------------| -----------------|-------|------|-------------|
-| 1.	  | BTC	        | POW	           | 141B  | 2009 | [1](http://stplaydog.github.io/files/white_paper/bitcoin.pdf) |
-| 2.	  | ETH		| POW/POS          | 26 B  | 2013 | [1](http://stplaydog.github.io/files/white_paper/ether_yellow.pdf) |
-| 3.	  | XRP		| BFT              | 16B   | 2012 | [1](http://stplaydog.github.io/files/white_paper/ripple_consensus_whitepaper.pdf) |
-| 4.	  | BCH		| POW              | 7B	   | 2009 | [1](http://stplaydog.github.io/files/white_paper/bitcoin.pdf) |
-| 5.	  | EOS		| POS              | 5B	   | 2017 | [1](https://github.com/EOSIO/Documentation/blob/master/TechnicalWhitePaper.md) |
-| 6.	  | LTC	        | POW	           | 5B	   | 2011 | [1](http://stplaydog.github.io/files/white_paper/Lite-Coin-Whitepaper.pdf) |
-| 7.	  | BNB	        | ERC20/POW        | 4B	   | 2017 | [1](http://stplaydog.github.io/files/white_paper/Binance_WhitePaper_en.pdf) |
-| 8.	  | USDT	| POW/BITCOIN      | 2.8B  | 2015 | [1](http://stplaydog.github.io/files/white_paper/TetherWhitePaper.pdf) |
-| 9.	  | XLM	        | BFT	           | 2.5B  | 2014 | [1](http://stplaydog.github.io/files/white_paper/stellar-consensus-protocol.pdf) |
-| 10.	  | ADA         | POS(Ouroboros)   | 2.1B  | 2015 | [1](http://stplaydog.github.io/files/white_paper/circle-research-cardano.pdf) |
-| 11.	  | TRON	| DPOS	           | 1.9B  | 2017 | [1](http://stplaydog.github.io/files/white_paper/white_paper_v_2_0.pdf) |
-| 12.	  | Monero	| POW	           | 1.4B  | 2014 | [1](https://wisepaper.com/2018/05/02/monero/)
-| 13.	  | Dash	| POS	           | 1.4B  | 2014 | [1](https://github.com/dashpay/dash/wiki/Whitepaper)
-| 14.	  | IOTA	| DAG	           | 1.1B  | 2016 | [1](http://stplaydog.github.io/files/white_paper/iota1_4_3.pdf) |
-| 15.	  | BSV	        | POW	           | 1.1B  | 2009 | [1](http://stplaydog.github.io/files/white_paper/bitcoin.pdf) |
-| 16.	  | Tezos	| POS	           | 1.1B  | 2016 | [1](http://stplaydog.github.io/files/white_paper/tezos.pdf) | 
-| 17.	  | COSMOS	| POS(TenderMint)  | 0.9B  | 2018 | [1](http://stplaydog.github.io/files/white_paper/buchman2016tendermint.pdf) [2](http://stplaydog.github.io/files/white_paper/cosmos-whitepaper.pdf) | 
-| 18.	  | ETC	        | POW	           | 0.8B  | 2013 | [1](http://stplaydog.github.io/files/white_paper/ether_yellow.pdf) |
-| 19.	  | NEM	        | reputation/POI   | 0.8B  | 2014 | [1](http://stplaydog.github.io/files/white_paper/NEM_techRef.pdf) | 
-| 20.	  | NEO	        | dBFT	           | 0.7B  | 2016 | [1](https://docs.neo.org/en-us/whitepaper.html)
+| 1.	  | BTC	        | POW	           | 141B  | 2009 | [[1]](http://stplaydog.github.io/files/white_paper/bitcoin.pdf) |
+| 2.	  | ETH		| POW/POS          | 26 B  | 2013 | [[1]](http://stplaydog.github.io/files/white_paper/ether_yellow.pdf) |
+| 3.	  | XRP		| BFT              | 16B   | 2012 | [[1]](http://stplaydog.github.io/files/white_paper/ripple_consensus_whitepaper.pdf) |
+| 4.	  | BCH		| POW              | 7B	   | 2009 | [[1]](http://stplaydog.github.io/files/white_paper/bitcoin.pdf) |
+| 5.	  | EOS		| POS              | 5B	   | 2017 | [[1]](https://github.com/EOSIO/Documentation/blob/master/TechnicalWhitePaper.md) |
+| 6.	  | LTC	        | POW	           | 5B	   | 2011 | [[1]](http://stplaydog.github.io/files/white_paper/Lite-Coin-Whitepaper.pdf) |
+| 7.	  | BNB	        | ERC20/POW        | 4B	   | 2017 | [[1]](http://stplaydog.github.io/files/white_paper/Binance_WhitePaper_en.pdf) |
+| 8.	  | USDT	| POW/BITCOIN      | 2.8B  | 2015 | [[1]](http://stplaydog.github.io/files/white_paper/TetherWhitePaper.pdf) |
+| 9.	  | XLM	        | BFT	           | 2.5B  | 2014 | [[1]](http://stplaydog.github.io/files/white_paper/stellar-consensus-protocol.pdf) |
+| 10.	  | ADA         | POS(Ouroboros)   | 2.1B  | 2015 | [[1]](http://stplaydog.github.io/files/white_paper/circle-research-cardano.pdf) |
+| 11.	  | TRON	| DPOS	           | 1.9B  | 2017 | [[1]](http://stplaydog.github.io/files/white_paper/white_paper_v_2_0.pdf) |
+| 12.	  | Monero	| POW	           | 1.4B  | 2014 | [[1]](https://wisepaper.com/2018/05/02/monero/)
+| 13.	  | Dash	| POS	           | 1.4B  | 2014 | [[1]](https://github.com/dashpay/dash/wiki/Whitepaper)
+| 14.	  | IOTA	| DAG	           | 1.1B  | 2016 | [[1]](http://stplaydog.github.io/files/white_paper/iota1_4_3.pdf) |
+| 15.	  | BSV	        | POW	           | 1.1B  | 2009 | [[1]](http://stplaydog.github.io/files/white_paper/bitcoin.pdf) |
+| 16.	  | Tezos	| POS	           | 1.1B  | 2016 | [[1]](http://stplaydog.github.io/files/white_paper/tezos.pdf) | 
+| 17.	  | COSMOS	| POS(TenderMint)  | 0.9B  | 2018 | [[1]](http://stplaydog.github.io/files/white_paper/buchman2016tendermint.pdf) [2](http://stplaydog.github.io/files/white_paper/cosmos-whitepaper.pdf) | 
+| 18.	  | ETC	        | POW	           | 0.8B  | 2013 | [[1]](http://stplaydog.github.io/files/white_paper/ether_yellow.pdf) |
+| 19.	  | NEM	        | reputation/POI   | 0.8B  | 2014 | [[1]](http://stplaydog.github.io/files/white_paper/NEM_techRef.pdf) | 
+| 20.	  | NEO	        | dBFT	           | 0.7B  | 2016 | [[1]](https://docs.neo.org/en-us/whitepaper.html)
 
 ### Conclusion
 
