add distributed system papers

--- a/_posts/2019-05-27-blog-post-1.md
+++ b/_posts/2019-05-27-blog-post-1.md
@@ -20,3 +20,7 @@ For beginners, Satoshi's Bitcoin paper is not really easy to understand, a bette
 https://github.com/lhartikk/naivechain
 
 https://github.com/conradoqg/naivecoin
+
+### Andrew Miller's ECE398SC Class
+
+[link](http://soc1024.ece.illinois.edu/)
