add distributed system papers

--- a/_posts/2019-06-10-blog-post-1.md
+++ b/_posts/2019-06-10-blog-post-1.md
@@ -32,6 +32,18 @@ tags:
 
 ### Facebook
 
+[[Cassandra]](http://stplaydog.github.io/files/distribued/Cassandra.pdf)
+[[Hive]](http://stplaydog.github.io/files/distribued/Hive.pdf)
+
 ### MSFT
 
+[[Isolation Levels]](http://stplaydog.github.io/files/distribued/iosolation.pdf)
+
 ### Amazon
+
+[[Dynamo]](http://stplaydog.github.io/files/distribued/Dynamo.pdf)
+
+### MISC
+
+[[LSM]](http://stplaydog.github.io/files/distribued/LSM.pdf)
+[[BASE]](http://stplaydog.github.io/files/distribued/BASE.pdf)
