--- a/_posts/2019-06-02-blog-post-1.md
+++ b/_posts/2019-06-02-blog-post-1.md
@@ -29,7 +29,7 @@ As of 2019/05/20
 | 13.	  | Dash(US)	| POS	           | 1.4B  | 2014 | [[1]](https://github.com/dashpay/dash/wiki/Whitepaper)
 | 14.	  | IOTA(BR)	| DAG	           | 1.1B  | 2016 | [[1]](http://stplaydog.github.io/files/white_paper/iota1_4_3.pdf) |
 | 15.	  | BSV(US)	| POW	           | 1.1B  | 2009 | [[1]](http://stplaydog.github.io/files/white_paper/bitcoin.pdf) |
-| 16.	  | Tezos(US)	| POS	           | 1.1B  | 2016 | [[1]](http://stplaydog.github.io/files/white_paper/tezos.pdf) | 
+| 16.	  | Tezos(US)	| POS(NoHardFork)  | 1.1B  | 2016 | [[1]](http://stplaydog.github.io/files/white_paper/tezos.pdf) | 
 | 17.	  | ATOM(US)	| POS(TenderMint)  | 0.9B  | 2018 | [[1]](http://stplaydog.github.io/files/white_paper/buchman2016tendermint.pdf) [[2]](http://stplaydog.github.io/files/white_paper/cosmos-whitepaper.pdf) | 
 | 18.	  | ETC(CA)	| POW	           | 0.8B  | 2013 | [[1]](http://stplaydog.github.io/files/white_paper/ether_yellow.pdf) |
 | 19.	  | XEM(AU)	| reputation/POI   | 0.8B  | 2014 | [[1]](http://stplaydog.github.io/files/white_paper/NEM_techRef.pdf) | 
