--- a/_posts/2020-12-15-blog-post-1.md
+++ b/_posts/2020-12-15-blog-post-1.md
@@ -6,7 +6,7 @@ tags:
   - Ethererum 
 ---
 
-![alt test](http://stplaydog.github.io/files/ethermonkey.png)
+![alt test](http://stplaydog.github.io/files/ethermonkey.png =100x)
 
 We have put ether-monkey.com in production , and a first payment of 1 ETH is made to 1 of our developers for one feature in sprint 1. Other 4 features worth 4 ETH are under processing.
 
